--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background: linear-gradient(
+        to right, rgba(255, 255, 255, 0.1) 1px, transparent 1px
+    ), linear-gradient(
+        to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px
+    );
 }
