--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,7 @@
     ), linear-gradient(
         to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px
     );
+    background-size: 50px 50px;
+    pointer-events: none;
+    z-index: -1;
 }
