--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,12 @@
   --sidebar-ring: oklch(0.551 0.027 264.364);
 }
 
+@layer utilities{
+  .gradient{
+    @apply bg-gradient-to-br from-gray-500 via-gray-200 to-white
+  }
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
