--- a/src/index.css
+++ b/src/index.css
@@ -112,11 +112,16 @@
   --sidebar-ring: oklch(0.551 0.027 264.364);
 }
 
-@layer utilities{
-  .gradient{
-    @apply bg-gradient-to-br from-gray-500 via-gray-200 to-white
+@layer utilities {
+  .gradient {
+    @apply bg-gradient-to-br from-gray-500 via-gray-200 to-white;
+  }
+
+  .gradient-title {
+    @apply bg-gradient-to-br from-gray-500 via-gray-200 to-white text-transparent bg-clip-text;
   }
 }
+
 
 @layer base {
   * {
